--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,19 +17,18 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  shared_preferences: ^0.5.4+1
-  loading: ^1.0.1
-  graphql_flutter: ^2.0.0
-  graphql: ^2.0.0
-  http: ^0.12.0+2
-  intl: ^0.15.8
-  flutter_facebook_login: ^1.2.0
-  flutter_launcher_icons: ^0.7.3
-  google_sign_in: ^4.0.11
-  url_launcher: ^5.2.5
-  expandable: ^3.0.1
+  shared_preferences: ^0.5.6
+  loading: ^1.0.2
+  graphql_flutter: ^2.1.1-beta.5
+  http: ^0.12.0+4
+  intl: ^0.16.1
+  flutter_facebook_login: ^3.0.0
+  flutter_launcher_icons: ^0.7.4
+  google_sign_in: ^4.1.1
+  url_launcher: ^5.4.1
+  expandable: ^4.0.2
   crypto: ^2.1.3
-  image_picker: ^0.4.10
+  image_picker: ^0.6.3
   googleapis: ^0.54.0
 
   flutter:
