--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   crypto: ^2.1.3
   image_picker: ^0.6.3
   googleapis: ^0.54.0
+  flutter_calendar_carousel: ^1.4.10
+  device_calendar: ^1.0.0+3
 
   flutter:
     sdk: flutter
